tests/errors/syntax.UnterminatedString.1.res
>> Syntax | File: syntax.UnterminatedString.1.art
    error | Line: 4
          | 
          | unterminated curly string
          | 
          | near: this {
          |             ^